LSP: reset expected content length when parsing incomplete header

Task-number: QTCREATORBUG-21035
Change-Id: I3e4acb3be05c37e5732bf246c1eb0fc95997674c
Reviewed-by: Eike Ziller <eike.ziller@qt.io>